RESOLVED FIXED210764
Intl classes shouldn't need an m_initialized* field
https://bugs.webkit.org/show_bug.cgi?id=210764
Summary Intl classes shouldn't need an m_initialized* field
Ross Kirsling
Reported 2020-04-20 13:36:54 PDT
Intl classes shouldn't need an m_initialized* field
Attachments
Patch (29.22 KB, patch)
2020-04-20 14:11 PDT, Ross Kirsling
no flags
Patch for landing (29.13 KB, patch)
2020-04-20 15:51 PDT, Ross Kirsling
no flags
Patch for landing (30.17 KB, patch)
2020-04-20 16:15 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2020-04-20 14:11:41 PDT
Darin Adler
Comment 2 2020-04-20 14:55:48 PDT
Comment on attachment 397012 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=397012&action=review > Source/JavaScriptCore/runtime/IntlNumberFormat.cpp:61 > + IntlNumberFormatField(int32_t type, int32_t size) > + : type(type) > + , size(size) > + { } Typically this should not be necessary. > Source/JavaScriptCore/runtime/IntlPluralRules.cpp:94 > Vector<String> data; > return data; return { };
Ross Kirsling
Comment 3 2020-04-20 15:51:30 PDT
Created attachment 397027 [details] Patch for landing
Ross Kirsling
Comment 4 2020-04-20 16:15:48 PDT
Created attachment 397034 [details] Patch for landing
EWS
Comment 5 2020-04-20 21:04:15 PDT
Committed r260411: <https://trac.webkit.org/changeset/260411> All reviewed patches have been landed. Closing bug and clearing flags on attachment 397034 [details].
Radar WebKit Bug Importer
Comment 6 2020-04-20 21:05:19 PDT
Note You need to log in before you can comment on or make changes to this bug.