Source/JavaScriptCore/runtime/IntlCollator.cpp
@@ -165,13 +165,11 @@ static Vector<String> searchLocaleData(const String&, size_t keyIndex)
     return keyLocaleData;
 }
 
+// https://tc39.github.io/ecma402/#sec-initializecollator
 void IntlCollator::initializeCollator(JSGlobalObject* globalObject, JSValue locales, JSValue optionsValue)
 {
     VM& vm = globalObject->vm();
     auto scope = DECLARE_THROW_SCOPE(vm);
-
-    // 10.1.1 InitializeCollator (collator, locales, options) (ECMA-402)
-    // https://tc39.github.io/ecma402/#sec-initializecollator
 
     auto requestedLocales = canonicalizeLocaleList(globalObject, locales);
     RETURN_IF_EXCEPTION(scope, void());
@@ -229,10 +227,10 @@ void IntlCollator::initializeCollator(JSGlobalObject* globalObject, JSValue loca
     m_collation = collation.isNull() ? "default"_s : collation;
     m_numeric = result.get("kn"_s) == "true";
 
-    const String& caseFirst = result.get("kf"_s);
-    if (caseFirst == "lower")
+    const String& caseFirstString = result.get("kf"_s);
+    if (caseFirstString == "lower")
         m_caseFirst = CaseFirst::Lower;
-    else if (caseFirst == "upper")
+    else if (caseFirstString == "upper")
         m_caseFirst = CaseFirst::Upper;
     else
         m_caseFirst = CaseFirst::False;
@@ -250,29 +248,17 @@ void IntlCollator::initializeCollator(JSGlobalObject* globalObject, JSValue loca
 
     bool usesFallback;
     bool ignorePunctuation = intlBooleanOption(globalObject, options, vm.propertyNames->ignorePunctuation, usesFallback);
+    RETURN_IF_EXCEPTION(scope, void());
     if (usesFallback)
         ignorePunctuation = false;
-    RETURN_IF_EXCEPTION(scope, void());
     m_ignorePunctuation = ignorePunctuation;
 
-    m_initializedCollator = true;
-}
-
-void IntlCollator::createCollator(JSGlobalObject* globalObject)
-{
-    VM& vm = globalObject->vm();
-    auto scope = DECLARE_CATCH_SCOPE(vm);
-    ASSERT(!m_collator);
-
-    if (!m_initializedCollator) {
-        initializeCollator(globalObject, jsUndefined(), jsUndefined());
-        scope.assertNoException();
-    }
-
     UErrorCode status = U_ZERO_ERROR;
-    auto collator = std::unique_ptr<UCollator, UCollatorDeleter>(ucol_open(m_locale.utf8().data(), &status));
-    if (U_FAILURE(status))
+    m_collator = std::unique_ptr<UCollator, UCollatorDeleter>(ucol_open(m_locale.utf8().data(), &status));
+    if (U_FAILURE(status)) {
+        throwTypeError(globalObject, scope, "failed to initialize Collator"_s);
         return;
+    }
 
     UColAttributeValue strength = UCOL_PRIMARY;
     UColAttributeValue caseLevel = UCOL_OFF;
@@ -301,35 +287,28 @@ void IntlCollator::createCollator(JSGlobalObject* globalObject)
         break;
     }
 
-    ucol_setAttribute(collator.get(), UCOL_STRENGTH, strength, &status);
-    ucol_setAttribute(collator.get(), UCOL_CASE_LEVEL, caseLevel, &status);
-    ucol_setAttribute(collator.get(), UCOL_CASE_FIRST, caseFirst, &status);
-    ucol_setAttribute(collator.get(), UCOL_NUMERIC_COLLATION, m_numeric ? UCOL_ON : UCOL_OFF, &status);
+    ucol_setAttribute(m_collator.get(), UCOL_STRENGTH, strength, &status);
+    ucol_setAttribute(m_collator.get(), UCOL_CASE_LEVEL, caseLevel, &status);
+    ucol_setAttribute(m_collator.get(), UCOL_CASE_FIRST, caseFirst, &status);
+    ucol_setAttribute(m_collator.get(), UCOL_NUMERIC_COLLATION, m_numeric ? UCOL_ON : UCOL_OFF, &status);
 
     // FIXME: Setting UCOL_ALTERNATE_HANDLING to UCOL_SHIFTED causes punctuation and whitespace to be
     // ignored. There is currently no way to ignore only punctuation.
-    ucol_setAttribute(collator.get(), UCOL_ALTERNATE_HANDLING, m_ignorePunctuation ? UCOL_SHIFTED : UCOL_DEFAULT, &status);
+    ucol_setAttribute(m_collator.get(), UCOL_ALTERNATE_HANDLING, m_ignorePunctuation ? UCOL_SHIFTED : UCOL_DEFAULT, &status);
 
     // "The method is required to return 0 when comparing Strings that are considered canonically
     // equivalent by the Unicode standard."
-    ucol_setAttribute(collator.get(), UCOL_NORMALIZATION_MODE, UCOL_ON, &status);
-    if (U_FAILURE(status))
-        return;
-
-    m_collator = WTFMove(collator);
+    ucol_setAttribute(m_collator.get(), UCOL_NORMALIZATION_MODE, UCOL_ON, &status);
+    ASSERT(U_SUCCESS(status));
 }
 
+// https://tc39.es/ecma402/#sec-collator-comparestrings
 JSValue IntlCollator::compareStrings(JSGlobalObject* globalObject, StringView x, StringView y)
 {
+    ASSERT(m_collator);
+
     VM& vm = globalObject->vm();
     auto scope = DECLARE_THROW_SCOPE(vm);
-
-    // 10.3.4 CompareStrings abstract operation (ECMA-402 2.0)
-    if (!m_collator) {
-        createCollator(globalObject);
-        if (!m_collator)
-            return throwException(globalObject, scope, createError(globalObject, "Failed to compare strings."_s));
-    }
 
     UErrorCode status = U_ZERO_ERROR;
     UCollationResult result = UCOL_EQUAL;
@@ -397,25 +376,10 @@ ASCIILiteral IntlCollator::caseFirstString(CaseFirst caseFirst)
     return ASCIILiteral::null();
 }
 
+// https://tc39.es/ecma402/#sec-intl.collator.prototype.resolvedoptions
 JSObject* IntlCollator::resolvedOptions(JSGlobalObject* globalObject)
 {
     VM& vm = globalObject->vm();
-    auto scope = DECLARE_THROW_SCOPE(vm);
-
-    // 10.3.5 Intl.Collator.prototype.resolvedOptions() (ECMA-402 2.0)
-    // The function returns a new object whose properties and attributes are set as if
-    // constructed by an object literal assigning to each of the following properties the
-    // value of the corresponding internal slot of this Collator object (see 10.4): locale,
-    // usage, sensitivity, ignorePunctuation, collation, as well as those properties shown
-    // in Table 1 whose keys are included in the %Collator%[[relevantExtensionKeys]]
-    // internal slot of the standard built-in object that is the initial value of
-    // Intl.Collator.
-
-    if (!m_initializedCollator) {
-        initializeCollator(globalObject, jsUndefined(), jsUndefined());
-        scope.assertNoException();
-    }
-
     JSObject* options = constructEmptyObject(globalObject);
     options->putDirect(vm, vm.propertyNames->locale, jsString(vm, m_locale));
     options->putDirect(vm, vm.propertyNames->usage, jsNontrivialString(vm, usageString(m_usage)));
